# spm

./: .gitmodules  Makefile  README.md  config.mk  meson.build
src/: Makefile  main.cpp
